# dotfiles

./: .cspell.json  .fritiof.lua  .gitignore  .neoconf.json  README.md  TODO.md  configuration.nix  fish.nix  flake.nix  home.nix  index.js  nixos.nix  rebuild.sh  result
.legacy/_modules/electron-flags/: electron-flags.nix
.legacy/home/: home.nix
.legacy/home/pumpedsardines/tmux-status-line/: Cargo.toml
.legacy/home/pumpedsardines/tmux-status-line/src/: main.rs
.legacy/home/pumpedsardines/tmux-status-line/src/widgets/: harvest.rs
.legacy/legacy/: README.md  index.js  rebuild.sh
.legacy/secrets/: anthropic  harvest
alacritty/: dark.toml  dark.yml  light.yml
computers/old-dell/: configuration.nix  hardware-configuration.nix  nvidia.nix
docs/: hosts.md  structure.md
home-manager/: fish.nix  home.nix
home-manager/alacritty/: light.toml
hosts/skruttet/: configuration.nix  hardware-configuration.nix
hosts/snorkfroken/: home.nix
modules/dolphin/: dolphin.nix
modules/dunst/: .dunstrc  dunst.nix  dunstrc
modules/hypr/: hypr.nix
modules/misc/: misc.nix
modules/nautilus/: nautilus.nix
modules/nvim/: nvim.nix
modules/nwg/: nwg.nix
modules/quickshell/: quickshell.nix
modules/rofi/: rofi.nix
modules/waybar/: waybar.nix
nvim/: init.lua  nvim.nix
nvim/config/: init.lua
nvim/lua/: keymaps.lua  options.lua  rename_tab.lua
nvim/snippets/: javascript.snippets  typescriptreact.snippets
old_nvim/: lazy-lock.json
old_nvim/lua/: color.lua
secrets/: anthropic  antrhopic  new
tmux/: .tmux.conf
wezterm/: .wezterm.lua  wezterm.lua
(+210 files in other folders)
