[package]
name = "tmux_status_line"
version = "0.1.2"
edition = "2021"

[lib]
name = "tmux_status_line"
path = "src/lib.rs"

[dependencies]
battery = "0.7.8"
chrono = "0.4.31"
uptime_lib = "0.3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
harvest = { path = "./harvest" }
homedir = "0.2.1"
sysinfo = "0.30.12"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
regex = "1.10.5"

[workspace]
members = [
  "harvest",
]
